force-app/main/default/objects/ServiceQuestionRule__c/ServiceQuestionRule__c.object-meta.xml
<CustomObject>
    <description>Service Question Rules store this table</description>
    <label>Service Question  Rule</label>
    <nameField>
        <displayFormat>QR-{00000000}</displayFormat>
        <label>SurveyQuestionruleName</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ServiceQuestionRules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>