force-app/main/default/objects/ServiceQuestionRule__c/fields/DefinedResponseValue__c.field-meta.xml
<CustomField>
    <fullName>DefinedResponseValue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defined Response Value</label>
    <referenceTo>ServiceQuestionDefinedResponse__c</referenceTo>
    <relationshipLabel>ServiceQuestionRules</relationshipLabel>
    <relationshipName>ServiceQuestionRules</relationshipName>
    <type>Lookup</type>
</CustomField>