force-app/main/default/objects/ServiceQuestionRule__c/fields/DefinedResponseValueText__c.field-meta.xml
<CustomField>
    <fullName>DefinedResponseValueText__c</fullName>
    <formula>IF( ISBLANK( DefinedResponseValue__c ),  Value__c , DefinedResponseValue__r.DefinedResponseText__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defined Response Value Text</label>
    <type>Text</type>
</CustomField>