force-app/main/default/objects/ServiceQuestionRule__c/fields/ParentServiceQuestion__c.field-meta.xml
<CustomField>
    <fullName>ParentServiceQuestion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Parent Service Question</label>
    <referenceTo>ServiceQuestion__c</referenceTo>
    <relationshipLabel>ServiceQuestionRules (Service Question)</relationshipLabel>
    <relationshipName>ParentServiceQuestion</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>