force-app/main/default/objects/ServiceQuestionRule__c/fields/ParentServiceQuestionText__c.field-meta.xml
<CustomField>
    <fullName>ParentServiceQuestionText__c</fullName>
    <formula>ParentServiceQuestion__r.QuestionText__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Service Question Text</label>
    <type>Text</type>
</CustomField>