force-app/main/default/objects/ServiceQuestionRule__c/fields/ParentServiceQuestionType__c.field-meta.xml
<CustomField>
    <fullName>ParentServiceQuestionType__c</fullName>
    <formula>ParentServiceQuestion__r.QuestionType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Service Question Type</label>
    <type>Text</type>
</CustomField>