force-app/main/default/objects/ServiceQuestionRule__c/fields/ServiceQuestion__c.field-meta.xml
<CustomField>
    <fullName>ServiceQuestion__c</fullName>
    <label>Service Question</label>
    <referenceTo>ServiceQuestion__c</referenceTo>
    <relationshipLabel>ServiceQuestionRules</relationshipLabel>
    <relationshipName>ServiceQuestionRules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>