force-app/main/default/objects/ServiceQuestionRule__c/fields/ServiceQuestionText__c.field-meta.xml
<CustomField>
    <fullName>ServiceQuestionText__c</fullName>
    <formula>ServiceQuestion__r.QuestionText__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Question Text</label>
    <type>Text</type>
</CustomField>